--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,382 @@
-/* место для вашего кода */
+.content-section{
+    box-sizing: border-box;
+    width: 1440px;
+    min-height: 97px;
+    margin: auto;
+  }
+  
+  .header{
+    padding: 90px 50px;
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    justify-content: center;
+    justify-content: space-between;
+    min-width: 1340px;
+    align-items: center;
+    margin: 0;
+  }
+  
+  .header_menu{
+    justify-self: start;
+  }
+  
+  .header_link{
+    color: #000;
+    font-family: Raleway, sans-serif;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+  }
+  
+  .header_links-list{
+    display: flex;
+    gap: 32px;
+  }
+  
+  .header_links-list-item{
+    list-style: circle ;
+  }
+  
+  .header_menu-item_active{
+    list-style: none;
+  }
+  
+  .header_logo{
+    display: block;
+    width: 148px;
+    height: 105px;
+    justify-self: center;
+  }
+  
+  .header_logo-image{
+    width: 100%;
+    height: 100%;
+  }
+  
+  .nav{
+    text-align: end;
+  }
+  
+  address{
+    justify-self: end;
+    display: block;
+    max-width: 240px;
+    font-style: normal;
+    line-height: 24.3px; /* 135% */
+    margin: 0;
+    font-size: 18px;
+    line-height: 24.3px;
+    color: #000;
+    font-family: Raleway;
+    font-style: normal;
+    font-weight: 400;
+    text-underline-offset: 4px;
+  }
+  
+  .address_right{
+    justify-self: end;
+    display: block;
+  }
+  
+  .cover{
+    min-height: 757px;
+    padding: 0;
+    position: relative;
+    top: 0;
+    left: 0;
+    margin: 0;
+    background-image: url(../images/cover.jpg);
+    background-size: cover;
+    background-position: center;
+  }
+  
+  .overlay{
+    background-color: rgb(0 0 0/ 0.6);
+    width: 100%;
+    height: 100%;
+    z-index: 0;
+    position: absolute;
+    flex-shrink: 0;
+    padding-top: 0;
+    padding-left: 0;
+  }
+  
+  .cover__title{
+    color: #FFF;
+    font-family: Raleway, sans-serif;
+    font-size: 100px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 100%; /* 100px */
+    text-transform: uppercase;
+    letter-spacing: 30px;
+    z-index: 1;
+  }
+  
+  .aligned-text{
+    display: block;
+    text-align: left;
+    padding-bottom: 20px;
+    letter-spacing: 30px;
+    padding: 165px 50px 20px 50px;
+    line-height: 115%;
+  }
+  
+  .letter-spacing-extended{
+    letter-spacing: 60px;
+  }
+  
+  .no-letter-spacing{
+    letter-spacing: 0px;
+  }
+  
+  .aligned-text_center{
+    display: block;
+    text-align: center;
+    padding: 0px 110px 20px 50px;
+    line-height: 100%;
+  }
+  
+  .aligned-text_right{
+    display: block;
+    text-align: right;
+    padding: 0px 50px 0px 50px;
+    line-height: 100%;
+  }
+  
+  .cover__description{
+    display: flex;
+    align-items:center;
+    padding-top: 135px;
+    justify-content: flex-end;
+    align-items: center;
+    gap: 78px;
+    margin: 0;
+  }
+  
+  .cover__description-text{
+    color: #FFF;
+    text-align: center;
+    font-family: Raleway;
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 400;
+    text-transform: uppercase;
+    line-height: 28px; /* 127.273% */
+    word-spacing: 18px;
+  }
+  
+  .bet-button{
+    min-width: 257px;
+    min-height: 52px;
+    margin-right: 50px;
+    flex-shrink: 0;
+    color: #FFF;
+    text-align: center;
+    font-family: Raleway;
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 400;
+    text-transform: uppercase;
+    background-color: transparent;
+  }
+  
+  .lots{
+    padding: 180px 50px;
+    min-width: 1340px;
+    min-height: 579px;
+    margin: 0;
+  }
+  
+  .lots__heading{
+    color: #000;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    text-transform: uppercase;
+    margin: 0;
+    padding-bottom: 27px;
+    padding-left: 40px;
+  }
+  
+  .lots__card-list{
+    display: flex;
+    gap: 25px;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    list-style: none;
+    flex: 1 0 wrap;
+    padding-bottom: 30px;
+  }
+  
+  .lots__card-list-item{
+    width: 430px;
+    min-height: 450px;
+  }
+  
+  .card-link{
+    display: block;
+    text-decoration: none;
+    height: 100%;
+  }
+  
+  .card{
+    height: 100%;
+  }
+  
+  .card_type_film{
+    background-image: url(../images/card-lot-01.jpg);
+    background-size: cover;
+    background-position: center;
+    position: relative;
+    top: 0;
+    left: 0;
+  }
+  
+  .lots-content{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 50px 40px;
+    height: 100%;
+  }
+  
+  .card__title{
+    color: #FFF;
+    font-family: Raleway;
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 120%; /* 26.4px */
+    text-decoration-line: underline;
+    text-transform: uppercase;
+  }
+  
+  .card__text{
+    color: #FFF;
+    font-family: Raleway;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 120%; /* 24px */
+  }
+  
+  .card_type_book{
+    background-image: url(../images/card-lot-02.jpg);
+    background-size: cover;
+    background-position: center;
+    position: relative;
+    top: 0;
+    left: 0;
+  }
+  
+  .card_type_picture{
+    background-image: url(../images/card-lot-03.jpg);
+    background-size: cover;
+    background-position: center; 
+    position: relative;
+    top: 0;
+    left: 0;
+  }
+  
+  .lots__look-more-link{
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    /*padding-top: 30px;*/
+    padding-left: 40px;
+    text-underline-offset: 6px;
+  }
+  
+  .about{
+    min-width: 1340px; 
+    padding: 0px 50px;
+    margin: 0;
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    grid-template-rows: repeat(2, 1fr);
+    column-gap: 17px;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .about__logo{
+    background-color: #000;
+    border-radius: 50%;
+    width: 55%;
+    height: 100%;
+    margin: 0px 95px;
+  }
+  
+  .about__logo-image{
+    width: 100%;
+    height: 100%;
+    padding: 63px 46px;
+  }
+  
+  .about__title{
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    text-transform: uppercase;
+    justify-self: start;
+    align-self: center;
+  }
+  
+  .about__text{
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    display: flex;
+    gap: 25px;
+    flex-direction: column;
+    grid-column: 2/3; 
+    grid-row: 2/3;
+    justify-self: stretch;
+  }
+  
+  .footer{
+    padding: 180px 50px 90px;
+    margin: 0;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+  }
+  
+  .address_left{
+    justify-self: start;
+    display: block;
+  }
+  
+  .footer__menu{
+    justify-self: center;
+    text-align: center;
+  }
+  
+  .footer__menu-list{
+    list-style: none;
+  }
+  
+  .footer__menu-link{
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+  }
+  
+  .footer__social-list{
+    display: flex;
+    gap: 50px;
+    max-width: 240px;
+    max-height: 48px;
+    justify-self: end;
+  }
+  
+  .footer__social-list-item{
+    list-style: none;
+  }
