--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,5 @@
 .content-section {
-    box-sizing: border-box;
-    width: 1440px;
-    min-height: 97px;
+    max-width: 1440px;
     margin: auto;
   }
   
@@ -9,7 +7,7 @@
     padding: 90px 50px;
     display: grid;
     grid-template-columns: repeat(3,1fr);
-    min-width: 1340px;
+    max-width: 1440px;
     align-items: center;
     margin: 0;
   }
@@ -57,7 +55,6 @@
   }
   
   address {
-    justify-self: end;
     display: block;
     max-width: 240px;
     font-style: normal;
@@ -71,19 +68,17 @@
   
   .address_right {
     justify-self: end;
-    display: block;
+    text-underline-offset: 3px;
   }
   
   .cover {
-    min-height: 757px;
-    padding: 0;
+    padding: 10px;
     position: relative;
-    top: 0;
-    left: 0;
     margin: 0;
     background-image: url(../images/cover.jpg);
     background-size: cover;
     background-position: center;
+    background-repeat: no-repeat;
   }
   
   .overlay {
@@ -92,9 +87,8 @@
     height: 100%;
     z-index: 0;
     position: absolute;
-    flex-shrink: 0;
-    padding-top: 0;
-    padding-left: 0;
+    top: 0;
+    left: 0;
   }
   
   .cover__title {
@@ -106,15 +100,18 @@
     line-height: 100%; /* 100px */
     text-transform: uppercase;
     letter-spacing: 30px;
+    margin: 160px 45px 130px 45px;
+    display: flex;
+    gap: 20px;
+    flex-direction: column;
+    position: relative;
     z-index: 1;
   }
   
   .aligned-text {
     display: block;
     text-align: left;
-    padding-bottom: 20px;
-    letter-spacing: 30px;
-    padding: 165px 50px 20px 50px;
+    letter-spacing: 27px;
     line-height: 115%;
   }
   
@@ -123,30 +120,32 @@
   }
   
   .no-letter-spacing {
-    letter-spacing: 0px;
+    letter-spacing: initial;
   }
   
   .aligned-text_center {
     display: block;
     text-align: center;
-    padding: 0px 110px 20px 50px;
     line-height: 100%;
+    margin-right: 55px;
   }
   
   .aligned-text_right {
     display: block;
     text-align: right;
-    padding: 0px 50px 0px 50px;
     line-height: 100%;
   }
   
   .cover__description {
     display: flex;
     align-items:center;
-    padding-top: 135px;
+    margin-top: 135px;
     justify-content: flex-end;
-    gap: 78px;
-    margin: 0;
+    gap: 80px;
+    margin-right: 40px;
+    margin-bottom: 35px;
+    position: relative;
+    z-index: 1;
   }
   
   .cover__description-text {
@@ -161,13 +160,12 @@
   }
   
   .bet-button {
-    min-width: 257px;
-    min-height: 52px;
-    margin-right: 50px;
+    width: 257px;
+    height: 52px;
     flex-shrink: 0;
     color: #FFF;
     text-align: center;
-    font-family: Raleway;
+    font-family: "Raleway","Arial", sans-serif;
     font-size: 22px;
     font-style: normal;
     font-weight: 400;
@@ -177,8 +175,7 @@
   
   .lots {
     padding: 180px 50px;
-    min-width: 1340px;
-    min-height: 579px;
+    max-width: 1440px;
     margin: 0;
   }
   
@@ -189,25 +186,22 @@
     font-weight: 700;
     line-height: normal;
     text-transform: uppercase;
-    margin: 0;
-    padding-bottom: 27px;
-    padding-left: 40px;
+    margin-bottom: 27px;
+    margin-left: 40px;
   }
   
   .lots__card-list {
     display: flex;
     gap: 25px;
-    width: 100%;
-    height: 100%;
-    margin: 0;
     list-style: none;
-    flex: 1 0 wrap;
-    padding-bottom: 30px;
+    margin-bottom: 30px;
+    flex-wrap: wrap;
   }
   
   .lots__card-list-item {
     width: 430px;
     min-height: 450px;
+    flex-grow: 1;
   }
   
   .card-link {
@@ -218,15 +212,15 @@
   
   .card {
     height: 100%;
+    width: 100%;
+    position: relative;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
   }
   
   .card_type_film {
     background-image: url(../images/card-lot-01.jpg);
-    background-size: cover;
-    background-position: center;
-    position: relative;
-    top: 0;
-    left: 0;
   }
   
   .lots-content {
@@ -235,6 +229,8 @@
     justify-content: space-between;
     padding: 50px 40px;
     height: 100%;
+    position: absolute;
+    z-index: 1;
   }
   
   .card__title {
@@ -259,20 +255,10 @@
   
   .card_type_book {
     background-image: url(../images/card-lot-02.jpg);
-    background-size: cover;
-    background-position: center;
-    position: relative;
-    top: 0;
-    left: 0;
   }
   
   .card_type_picture {
     background-image: url(../images/card-lot-03.jpg);
-    background-size: cover;
-    background-position: center;
-    position: relative;
-    top: 0;
-    left: 0;
   }
   
   .lots__look-more-link {
@@ -280,21 +266,22 @@
     font-style: normal;
     font-weight: 400;
     line-height: normal;
-    padding-left: 40px;
+    margin-left: 40px;
     text-underline-offset: 6px;
   }
   
   .about {
-    min-width: 1340px;
+    max-width: 1440px;
     padding: 0px 50px;
     margin: 0;
     display: grid;
     grid-template-columns: 1fr 2fr;
     grid-template-rows: repeat(2, 1fr);
-    column-gap: 17px;
+    column-gap: 10px;
     justify-content: center;
     align-items: center;
   }
+
   
   .about__logo {
     background-color: #000;
@@ -342,7 +329,6 @@
   
   .address_left {
     justify-self: start;
-    display: block;
   }
   
   .footer__menu {
@@ -360,15 +346,23 @@
     font-weight: 400;
     line-height: normal;
   }
+
+  .footer__menu-link_active{
+    text-decoration: none;
+  }
   
   .footer__social-list {
     display: flex;
     gap: 50px;
     max-width: 240px;
-    max-height: 48px;
     justify-self: end;
   }
   
   .footer__social-list-item {
     list-style: none;
+  }
+
+  .footer__social-link{
+    display: block;
+    width: 48px;
   }
