--- a/styles/style.css
+++ b/styles/style.css
@@ -18,7 +18,7 @@
   
   .header_link {
     color: #000;
-    font-family: Raleway, sans-serif;
+    font-family: "Raleway","Arial", sans-serif;
     font-size: 18px;
     font-style: normal;
     font-weight: 400;
@@ -64,9 +64,6 @@
     color: #000;
     font-weight: 400;
     text-underline-offset: 4px;
-  }
-  
-  .address_right {
     justify-self: end;
     text-underline-offset: 3px;
   }
@@ -93,7 +90,7 @@
   
   .cover__title {
     color: #FFF;
-    font-family: Raleway, sans-serif;
+    font-family: "Raleway","Arial", sans-serif;
     font-size: 100px;
     font-style: normal;
     font-weight: 700;
@@ -229,13 +226,13 @@
     justify-content: space-between;
     padding: 50px 40px;
     height: 100%;
-    position: absolute;
+    position: relative;
     z-index: 1;
   }
   
   .card__title {
     color: #FFF;
-    font-family: Raleway;
+    font-family: "Raleway","Arial", sans-serif;
     font-size: 22px;
     font-style: normal;
     font-weight: 700;
@@ -246,7 +243,7 @@
   
   .card__text {
     color: #FFF;
-    font-family: Raleway;
+    font-family: "Raleway","Arial", sans-serif;
     font-size: 20px;
     font-style: normal;
     font-weight: 400;
@@ -325,15 +322,12 @@
     margin: 0;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-  }
-  
-  .address_left {
-    justify-self: start;
+    gap: 310px;*/
   }
   
   .footer__menu {
     justify-self: center;
-    text-align: center;
+    text-align: center;*/
   }
   
   .footer__menu-list {
@@ -355,7 +349,6 @@
     display: flex;
     gap: 50px;
     max-width: 240px;
-    justify-self: end;
   }
   
   .footer__social-list-item {
